utils/blockbuilder: add py_method to pyshell
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/utils/blockbuilder/templates/blockname_pybind.cc.j2
+++ b/utils/blockbuilder/templates/blockname_pybind.cc.j2
@@ -50,5 +50,9 @@ void bind_{{block}}(py::module& m)
         .def("{{p['id']}}", &gr::{{module}}::{{block}}::{{p['id']}})
         {% endif -%}
         {% endfor %}{% endif %}  
+        .def("py_method", &gr::{{module}}::{{block}}::py_method,
+            py::arg("name"),
+            py::arg("args") = py::tuple(),
+            py::arg("kwargs") = py::dict())
                    ;
 }
