--- a/utils/blockbuilder/templates/blockname.h.j2
+++ b/utils/blockbuilder/templates/blockname.h.j2
@@ -7,9 +7,13 @@
 
 {{ macros.includes(includes) }}
 
-// TODO: only put this here if lang:python in implementations
+{% set vars = {'py_incl': False} %}
+{% for impl in implementations -%}
+{% if 'lang' in impl and impl['lang'] == 'python' and not vars.py_incl -%}
 #include <pybind11/pybind11.h> // must be first
 namespace py = pybind11;
+{% if vars.update({'py_incl': True}) %} {% endif %}{% endif %}
+{%- endfor -%}
 
 namespace gr {
 namespace {{module}} {
@@ -26,8 +30,12 @@ public:
 
     {{ macros.callbacks(callbacks) }}    
 
-    // TODO: only put this here if lang:python in implementations
-    virtual py::object py_method(const std::string& name, py::tuple args = py::tuple(), py::dict kwargs = py::dict()) = 0;
+    {% set vars = {'py_impl': False} %}
+    {% for impl in implementations -%}
+    {% if 'lang' in impl and impl['lang'] == 'python' and not vars.py_impl -%}
+    virtual py::object py_method(const std::string& name, py::tuple args = py::tuple(), py::dict kwargs = py::dict()) {throw std::runtime_error("py_method only defined for python implementations");};
+    {% if vars.update({'py_impl': True}) %} {% endif %}{% endif %}
+    {%- endfor -%}
 
 protected:
     {{ macros.message_ports(ports) }} 
