utils/blockbuilder: dummy param for py_method
This is a workaround since not all params show up in this list it is
hard to avoid that last comma in the case of cotr=false params

Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/utils/blockbuilder/templates/blockname_pyshell_templated.h.j2
+++ b/utils/blockbuilder/templates/blockname_pyshell_templated.h.j2
@@ -26,10 +26,11 @@ public:
         {%- if parameters -%}
         {%- for p in parameters -%}
         {%- if 'cotr' not in p or p['cotr'] %}
-        "{{p['id']}}"_a = args.{{p['id']}}{{"," if not loop.last}}
+        "{{p['id']}}"_a = args.{{p['id']}},
         {%- endif -%}
         {%- endfor -%}
-        {%- endif -%});
+        {%- endif -%}"__dummy"_a=0
+        );
 
         _pyimpl = mod.attr((std::string("{{block}}")+this->suffix()).c_str())(dynamic_cast<{{block}}<T>*>(this), **kwargs);
     }
