--- a/utils/blockbuilder/templates/blockname_pyshell.h.j2
+++ b/utils/blockbuilder/templates/blockname_pyshell.h.j2
@@ -26,10 +26,10 @@ public:
         {%- if parameters -%}
         {%- for p in parameters -%}
         {%- if 'cotr' not in p or p['cotr'] %}
-        "{{p['id']}}"_a = args.{{p['id']}}{{"," if not loop.last}}
+        "{{p['id']}}"_a = args.{{p['id']}},
         {%- endif -%}
         {%- endfor -%}
-        {%- endif -%});
+        {%- endif -%}"__dummy"_a=0);
 
         _pyimpl = mod.attr("{{block}}")(dynamic_cast<{{block}}*>(this), **kwargs);
     
