--- a/utils/blockbuilder/templates/module_python.meson.build.j2
+++ b/utils/blockbuilder/templates/module_python.meson.build.j2
@@ -36,13 +36,13 @@ gen_{{module}}_pybind = custom_target('gen_{{module}}_pybind',
 
 {{module}}_pybind_sources += gen_{{module}}_pybind
 
-gnuradio_blocklib_{{module}}_pybind = py3_inst.extension_module('{{module}}_python',
+gnuradio_blocklib_{{module}}_pybind = py3.extension_module('{{module}}_python',
     {{module}}_pybind_sources, 
     include_directories: ['../../../lib', incdir_numpy],
     dependencies : [gnuradio_blocklib_{{module}}_dep, python3_dep, pybind11_dep],
     link_language : 'cpp',
     install : true,
-    install_dir : join_paths(py3_inst.get_install_dir(),'gnuradio','{{module}}')
+    install_dir : join_paths(py3.get_install_dir(),'gnuradio','{{module}}')
 )
 
 gnuradio_blocklib_{{module}}_pybind_dep = declare_dependency(include_directories : incdir,
@@ -51,4 +51,4 @@ gnuradio_blocklib_{{module}}_pybind_dep = declare_dependency(include_directories
 
 
 # Target for pure python
-py3_inst.install_sources(srcs, subdir : join_paths('gnuradio','{{module}}'))
+py3.install_sources(srcs, subdir : join_paths('gnuradio','{{module}}'))
