--- a/utils/blockbuilder/templates/blockname.h.j2
+++ b/utils/blockbuilder/templates/blockname.h.j2
@@ -9,7 +9,7 @@
 
 {% set vars = {'py_incl': False} %}
 {% for impl in implementations -%}
-{% if 'lang' in impl and impl['lang'] == 'python' and not vars.py_incl -%}
+{% if 'lang' in impl and impl['lang'] == 'python' and not vars.py_incl and GR_ENABLE_PYTHON -%}
 #include <pybind11/pybind11.h> // must be first
 namespace py = pybind11;
 {% if vars.update({'py_incl': True}) %} {% endif %}{% endif %}
@@ -32,7 +32,7 @@ public:
 
     {% set vars = {'py_impl': False} %}
     {% for impl in implementations -%}
-    {% if 'lang' in impl and impl['lang'] == 'python' and not vars.py_impl -%}
+    {% if 'lang' in impl and impl['lang'] == 'python' and not vars.py_impl and GR_ENABLE_PYTHON -%}
     virtual py::object py_method(const std::string& name, py::tuple args = py::tuple(), py::dict kwargs = py::dict()) {throw std::runtime_error("py_method only defined for python implementations");};
     {% if vars.update({'py_impl': True}) %} {% endif %}{% endif %}
     {%- endfor -%}
