--- a/utils/blockbuilder/templates/module.meson.build.j2
+++ b/utils/blockbuilder/templates/module.meson.build.j2
@@ -15,17 +15,17 @@ subdir('include/gnuradio/{{module}}')
 {% if has_enums -%}
 gen_srcs = custom_target('gen_{{module}}_enums',
                         input : ['enums.yml'],
-                        output : ['enums.h','enums_pybind.cc'], 
-                        command : ['python3', join_paths(SCRIPTS_DIR,'process_module_enums.py'),
+                        output : ['enums.h','enums_pybind.cc'],
+                        command : [py3_build, join_paths(SCRIPTS_DIR,'process_module_enums.py'),
                             '--module', '{{module}}',
-                            '--yaml_file', '@INPUT@', 
-                            '--output_h', '@OUTPUT0@', 
-                            '--output_pybind', '@OUTPUT1@', 
+                            '--yaml_file', '@INPUT@',
+                            '--output_h', '@OUTPUT0@',
+                            '--output_pybind', '@OUTPUT1@',
                             '--build_dir', meson.build_root()],
                         install : true,
                         install_dir : ['include/gnuradio/{{module}}', false])
 
-if GR_ENABLE_PYTHON 
+if GR_ENABLE_PYTHON
     {{module}}_pybind_sources += gen_srcs[1]
     {{module}}_pybind_names += 'enums'
 endif
