--- a/utils/blockbuilder/templates/blockname_python_impl_meson.build.j2
+++ b/utils/blockbuilder/templates/blockname_python_impl_meson.build.j2
@@ -1,5 +1,5 @@
-r = run_command('python3', join_paths(SCRIPTS_DIR,'copyfile.py'), 
-    '--input_file', join_paths(meson.current_source_dir(), '{{block}}.py'), '--output_file', 
+r = run_command(py3_build, join_paths(SCRIPTS_DIR,'copyfile.py'),
+    '--input_file', join_paths(meson.current_source_dir(), '{{block}}.py'), '--output_file',
     join_paths(meson.project_build_root(),'blocklib','{{module}}','python','gnuradio','{{module}}','{{impl['id']}}','{{block}}.py'),
     check:true)
 
